<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.android.quizapplication.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        tools:context="com.example.android.quizapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/cyber_security_quiz_app"
                android:textSize="26sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/_1_which_type_of_cyber_attack_is_commonly_performed_through_emails"
                    android:textSize="18sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/cyberattack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingTop="15dp">

                <RadioButton
                    android:id="@+id/trojan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/trojan" />

                <RadioButton
                    android:id="@+id/phishing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/phishing" />

                <RadioButton
                    android:id="@+id/worms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Worms" />

                <RadioButton
                    android:id="@+id/ransomware"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/ransomware" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/_2_for_maximum_security_passwords_should_be_made_up_of"
                    android:textSize="18sp" />
            </LinearLayout>
            <RadioGroup
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">


                <RadioButton
                    android:id="@+id/lettersonly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/lower_case_letters_only"

                    />

                <RadioButton
                    android:id="@+id/memorablenames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/memorable_names_and_dates" />

                <RadioButton
                    android:id="@+id/sequenceofnumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/a_sequence_of_numbers_or_letters" />

                <RadioButton
                    android:id="@+id/upperandlower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/upper_and_lower_case_letters_numbers_and_symbols" />


            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/_3_which_three_are_common_forms_of_cyber_attacks"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/baiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/baiting" />

            <CheckBox
                android:id="@+id/ransom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ransomware" />

            <CheckBox
                android:id="@+id/fishing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/fishing" />

            <CheckBox
                android:id="@+id/travelling_worms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/network_travelling_worms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/_4_what_is_the_process_of_encoding_information_in_a_way_so_that_only_someone_with_a_key_can_decode_it"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/compression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/compression" />

            <CheckBox
                android:id="@+id/systematic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/systematic_variation" />

            <CheckBox
                android:id="@+id/encyptiom"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/encryption" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/_5_to_protect_a_computer_from_virus_you_should_install_in_your_computer"
                    android:textSize="18sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/fieldtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:hint="@string/type_answer_here"
                android:textSize="20sp" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
